--- a/TypeScript/tsconfig.json
+++ b/TypeScript/tsconfig.json
@@ -4,8 +4,11 @@
     "target": "es2016",
     "module": "commonjs",
     "strict": true,
-    "sourceMap": true
-  }
+    "sourceMap": true,
+    "baseUrl": "./",
+    "outDir": "./dist"
+  },
+  "include": ["**/*.ts"]
 
   // 컴파일할 파일들의 개별 목록을 지정하는 속성
   // "files": ["src/main.ts", "src/utils.ts"],
